--- a/elevation_mapping/elevation_mapping/config/robots/youbot.yaml
+++ b/elevation_mapping/elevation_mapping/config/robots/youbot.yaml
@@ -8,11 +8,11 @@ input_sources:
       type: perfect
 
 
-map_frame_id: "map"
+map_frame_id: "cavity"
 robot_base_frame_id: "base_link"
 robot_pose_with_covariance_topic: "" # Leaving this empty skipps pose covariance updates.
 robot_pose_cache_size: 200
-track_point_frame_id: "base_link"
-track_point_x: 2.5
-track_point_y: 0.0
+track_point_frame_id: "cavity"
+track_point_x: 0.9
+track_point_y: 0.75
 track_point_z: 0.0
