--- a/insul_monit/package.xml
+++ b/insul_monit/package.xml
@@ -49,7 +49,8 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>pcl_conversions</build_depend>
+  
+  <!-- <build_depend>pcl_conversions</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
@@ -60,9 +61,9 @@
   <build_depend>rospy</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>message_runtime</build_depend>
-  <build_export_depend>pcl_conversions</build_export_depend>
+  <build_depend>message_generation</build_depend> -->
+
+  <!-- <build_export_depend>pcl_conversions</build_export_depend>
   <build_export_depend>pcl_ros</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
@@ -74,8 +75,9 @@
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>std_srvs</build_export_depend>
   <build_export_depend>message_generation</build_export_depend>
-  <build_export_depend>message_runtime</build_export_depend>
-  <exec_depend>pcl_conversions</exec_depend>
+  <build_export_depend>message_runtime</build_export_depend> -->
+
+  <!-- <exec_depend>pcl_conversions</exec_depend>
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
@@ -86,8 +88,21 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>std_srvs</exec_depend>
-  <exec_depend>message_generation</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>message_runtime</exec_depend> -->
+
+  <depend>pcl_conversions</depend>
+  <depend>pcl_ros</depend>
+  <depend>roscpp</depend>
+  <depend>sensor_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>grid_map_msgs</depend>
+  <depend>rospy</depend>
+  <depend>nav_msgs</depend>
+  <depend>std_srvs</depend>
+  <depend>message_generation</depend>
+  <depend>message_runtime</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
